@@ -110,9 +110,9 @@ Definition id: Set -> Set := fun A => A.
 Definition rel : forall A : Set, relation (id A) := @eq.
 Definition f: forall A : Set, A -> A := fun A x => x.
 
-Add Relation id rel as eq_rel.
+Instance DefaultRelation (id A) (rel A).
 
-Add Morphism f with signature rel ++> rel as f_morph.
+Add Morphism (@f A) : f_morph.
 Proof.
 unfold rel, f. trivial.
 Qed.
